# tenderish

./: README.md  main.py  pyproject.toml
app/adapter/: inmemory_tender_repository.py  mongo_tender_repository.py
app/domain/: tender.py  tender_repository.py
tests/: test_tender_api.py
