[tool.poetry]
name = "tenderish"
version = "0.1.0"
description = "minimal service to run tender"
authors = ["Hossein <iman.rahmani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.5.0"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
